Fix SignIn centering on iOS

--- a/src/SignIn.css
+++ b/src/SignIn.css
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0 3rem;
   background-image: url(./assets/background_login.png);
 }
